# assistant

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
inc/: c_socket.hpp
src/: CMakeLists.txt  best_client_sample.c  best_server_sample.c  c_socket.cpp  client_sample.c  server_sample.c
tests/: CMakeLists.txt  test_c_socket_client.cpp  test_c_socket_server.cpp
